# smarter_tech_challenge

./: .coverage  .gitignore  Makefile  README.md  main.py  pyproject.toml  sort.py  test_sort.py
